--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --loader ts-node/esm --experimental-specifier-resolution=node index.ts",
-    "dev": "nodemon src/server.ts"
+    "start": "node --require ts-node/register/transpile-only src/index.ts",
+    "predev": "npx kill-port 3000",
+    "dev": "nodemon --ignore output/ index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "kill-port": "^2.0.1",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
