--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prestart": "npx kill-port 3000",
     "start": "node --require ts-node/register/transpile-only src/server.ts",
     "predev": "npx kill-port 3000",
-    "dev": "nodemon --ignore output/ server.ts"
+    "dev": "nodemon --ignore output/ server.ts",
+    "generate": "node --require ts-node/register/transpile-only src/index.ts"
   },
   "author": "",
   "license": "ISC",
